Bug 403565 - Crash when importing qif
Summary: Crash when importing qif
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 5.0.2
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-24 18:25 UTC by Kwanza.Pili
Modified: 2019-01-26 15:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments
Backtrace (3.54 KB, text/plain)
2019-01-24 18:25 UTC, Kwanza.Pili
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kwanza.Pili 2019-01-24 18:25:45 UTC
Created attachment 117642 [details]
Backtrace

SUMMARY
Whenever, I try to import a QIF file, the application crashes immediately

STEPS TO REPRODUCE
1. Select "import->QIF"
2. Select file to import (in QIF format)
3. Select Asset class

OBSERVED RESULT
Immediate crash

EXPECTED RESULT
Import file and process transactions

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.54.0
Qt Version: 5.12.0

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2019-01-26 15:25:19 UTC
Git commit c9bacc5dc70ebdbb046a80331efe6f7ada90484f by Thomas Baumgart.
Committed on 26/01/2019 at 14:49.
Pushed by tbaumgart into branch '5.0'.

Avoid destruction of object that is still being used

The m_qifReader object was deleted to early.
FIXED-IN: 5.0.3

M  +4    -3    kmymoney/plugins/qif/import/qifimporter.cpp

https://commits.kde.org/kmymoney/c9bacc5dc70ebdbb046a80331efe6f7ada90484f