Avoid destruction of object that is still being used

The m_qifReader object was deleted to early.

BUG: 403565
FIXED-IN: 5.0.3